fixed scrolling when checkbox or radiobutton selected, fixed spacing in notifications and alarms

--- a/css/forms.css
+++ b/css/forms.css
@@ -1,6 +1,6 @@
 html {
-	height: 100%;
-	width: 100%;
+	/*height: 100%;
+	width: 100%;*/
 	margin: 0;
 	padding: 0;
 }
@@ -11,8 +11,8 @@ body {
   background: -o-linear-gradient(bottom right,#BBDEFB, #B0C4DE) fixed; /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient(bottom right, #BBDEFB, #B0C4DE) fixed ; /* For Firefox 3.6 to 15 */
   background: linear-gradient(to bottom right,  #BBDEFB, #B0C4DE) fixed; /* Standard syntax */
-  height: 100%;
-  width: 100%;
+ /* height: 100%;
+  width: 100%;*/
   padding: 0;
   margin: 0;
 }
@@ -286,7 +286,7 @@ p#alarm {
 
 p#notifications{
 	position: relative;
-	padding-top: 5%;
+	padding-top: 2%;
 }
 
 .myFile input[type="file"] {
@@ -303,7 +303,7 @@ p#notifications{
 
 .onoffswitch {
     position: relative; width: 63px; 
-    bottom: 36px;
+    margin-top: -36px;
     left: 20%;
     -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
 }
@@ -326,7 +326,7 @@ p#notifications{
 .onoffswitch-inner:before {
     content: "ON";
     padding-left: 10px;
-    background-color: #34A7C1; color: #FFFFFF;
+    background-color: #48BA87; color: #FFFFFF;
 }
 .onoffswitch-inner:after {
     content: "OFF";
